--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <style>
+  .customBox {
+    background: yellow;
+    border: 1px solid black;
+    position: absolute;
+  }
+</style>
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
@@ -14,8 +21,7 @@
 
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC-v0oz7Pay_ltypZbKasABXGiY9NlpCIY&callback="></script>
-    <script src="bower_components/heatmap.js-amd/build/heatmap.js"></script>
-    <script src="bower_components/heatmap.js-amd/plugins/gmaps-heatmap.js"></script>
+
   </head>
   <body>
     <div id="app"></div>
