--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-.customBox {
-  background: yellow;
-  border: 1px solid black;
-  position: absolute;
-}
-</style>
-<title>Simple Map</title>
-<meta name="viewport" content="initial-scale=1.0">
-<meta charset="utf-8">
-<style>
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0; font-family:sans-serif; }
-#app { height: 100% }
-h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200; z-index:10000;}
-#all-examples-info { position:absolute; background:white; font-size:16px; padding:20px; bottom:20px; width:350px; line-height:150%; border:1px solid rgba(0,0,0,.2);}
-</style>
-
-<script src="bower_components/appbase-js/browser/appbase.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC-v0oz7Pay_ltypZbKasABXGiY9NlpCIY&callback="></script>
-
+  <title>Demand and Supply simulation using Appbase.io</title>
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta charset="utf-8">
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC-v0oz7Pay_ltypZbKasABXGiY9NlpCIY&callback="></script>
+  <link rel="stylesheet" href="assets/styles/style.css"></style>
 </head>
+
 <body>
-  <div id="app"></div>
-
+  <div id="app">
+      <!-- React magic will happen here! -->
+  </div>
   <script src="dist/index.js"></script>
-
 </body>
+
 </html>
