--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
   <title>Demand and Supply simulation using Appbase.io</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC-v0oz7Pay_ltypZbKasABXGiY9NlpCIY&callback="></script>
   <link rel="stylesheet" href="assets/styles/style.css"></style>
 </head>
 
 <body>
+
   <div id="app">
-      <!-- React magic will happen here! -->
+    <!-- React magic will happen here! -->
+
+  </div>
+  <div id="over_map">
+    <ul class="list-group">
+      <li class="list-group-item">Red: SP>=4x</li>
+      <li class="list-group-item">Yellow: 2x<=SP<=4x </li>
+      <li class="list-group-item">Green: 1x<=SP<=2x </li>
+      <li class="list-group-item">Blue: No SP</li>
+    </ul>
   </div>
   <script src="dist/index.js"></script>
 </body>
